<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:background="@drawable/logo"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/btn_appinfo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bt_shape"
        android:textSize="14sp"
        android:textColor="@color/colorGray"
        android:text="@string/app_info"/>
    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/current_version"
        android:textSize="14sp"/>
    <LinearLayout
        android:background="@color/colorRed"
        android:layout_marginTop="5dp"
        android:layout_width="160dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_checkupdate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/check_update"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/contact_us"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:gravity="center"
        android:linksClickable="true"
        android:textColorLink="@color/colorBlue"
        android:text="@string/email"
        android:textSize="14sp"/>
</LinearLayout>
