<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#fafafa">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/my_favorite_list"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Switch
                android:id="@+id/play_wallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_toStartOf="@+id/ib_upload"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:text="@string/play_wallpaper"/>
            <ImageButton
                android:id="@+id/ib_upload"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:layout_toStartOf="@+id/ib_close"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/upload"/>
            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/close_v2"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ProgressBar
                android:id="@+id/pb_loadingwait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="找不到壁纸"
                android:textSize="16sp"/>
            <com.samsung.app.smartwallpaper.view.WallpaperRecyclerView
                android:id="@+id/wallpaper_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:padding="3dp"/>
            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:minHeight="35dp"
                android:maxLines="2"
                android:layout_gravity="top"
                android:gravity="center"
                android:background="#A0808080"
                android:visibility="gone"
                android:text="@string/hint_no_matched"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_wallpaper_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="1dp"
        android:background="@drawable/grid">
        <com.samsung.app.smartwallpaper.view.PhotoViewPager
            android:id="@+id/view_paper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_gravity="bottom|end"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="应用"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:padding="5dp"
            android:layout_gravity="end|top"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/share"/>
        <TextView
            android:id="@+id/tv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="bottom|center_horizontal"
            android:minWidth="15dp"
            android:text="1/10"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </FrameLayout>
</FrameLayout>