<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="5dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/search_result"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <com.samsung.app.smartwallpaper.view.SearchBox
                android:id="@+id/searchbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/ib_close"
                android:layout_toEndOf="@+id/tv_title"
                android:drawableEnd="@drawable/search"
                android:background="@android:drawable/editbox_background_normal"
                android:windowSoftInputMode="adjustNothing|stateHidden"
                android:textColor="#000"
                android:textColorHint="#bfbfbf"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="10dip"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColorHighlight="@android:color/holo_blue_bright"
                android:hint="@string/key_words"/>
            <ImageButton
                android:id="@+id/ib_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/close_v2"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="服务器异常\n连接超时!"
                android:textSize="16sp"/>
            <com.samsung.app.smartwallpaper.view.WallpaperRecyclerView
                android:id="@+id/wallpaper_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:padding="3dp"/>
            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:minHeight="35dp"
                android:maxLines="2"
                android:layout_gravity="top"
                android:gravity="center"
                android:background="#A0808080"
                android:visibility="gone"
                android:text="@string/hint_no_matched"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>
            <com.samsung.app.smartwallpaper.view.TagContainer
                android:id="@+id/tag_container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:minHeight="150dp"
                android:padding="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_tag_container"
                android:layout_gravity="top"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/iv_voice"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="45dp"
                android:layout_gravity="start|bottom"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/voice"/>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <LinearLayout
                android:id="@+id/ll_favoritelist"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_star_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:text="收藏夹"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_nextbatch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_refresh_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:text="换一批"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:gravity="center"
                android:orientation="vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_settings_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:text="设置"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_wallpaper_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/grid">
        <com.samsung.app.smartwallpaper.view.PhotoViewPager
            android:id="@+id/view_paper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="8dp">
            <ImageButton
                android:id="@+id/ib_voteup_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/vote_up_off"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/tv_voteup_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:minWidth="15dp"
                android:layout_toEndOf="@+id/ib_voteup_icon"
                android:layout_alignBottom="@+id/ib_voteup_icon"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <ImageButton
                android:id="@+id/ib_favorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_toEndOf="@+id/tv_voteup_count"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/favorite_off"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/tv_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="应用"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </RelativeLayout>
        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:padding="5dp"
            android:layout_gravity="end|top"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/share"/>
        <TextView
            android:id="@+id/tv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="bottom|center_horizontal"
            android:minWidth="15dp"
            android:text="1/10"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </FrameLayout>
</FrameLayout>